--- a/src/css/crowdfund.css
+++ b/src/css/crowdfund.css
@@ -1,51 +1,76 @@
 .bg {
-    height: 100vh;
-    width: 100%;
-    background-color: #eceff1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .card {
-    text-align: center;
-    min-width: 350px;
-    min-height: 300px;
-    border-radius: 20px;
-    background-color: #fafafa;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .container {
-    width: 90%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  
-  .back {
-    background-color: rgba(174, 213, 129, 0.3);
-    border-color: rgba(174, 213, 129, 1);
-    width: 100%;
-    height: 30px;
-    border-width: 2px;
-    border-radius: 25px;
-    border-style: solid;
-    padding: 0px;
-    align-content: left;
-    overflow: hidden;
-  }
-  
-  .front {
-    height: 100%;
-    background-color: rgba(174, 213, 129, 1);
-    border-radius: 10px;
-    margin: 0px;
-    padding: 0px;
-    transition: 1s;
-  }
-  
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  background-color: #eceff1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  text-align: center;
+  min-width: 350px;
+  min-height: 300px;
+  border-radius: 20px;
+  background-color: #fafafa;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container {
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.back {
+  background-color: rgba(174, 213, 129, 0.3);
+  border-color: rgba(174, 213, 129, 1);
+  width: 100%;
+  height: 30px;
+  border-width: 2px;
+  border-radius: 25px;
+  border-style: solid;
+  padding: 0px;
+  align-content: left;
+  overflow: hidden;
+}
+
+.front {
+  height: 100%;
+  background-color: rgba(174, 213, 129, 1);
+  border-radius: 10px;
+  margin: 0px;
+  padding: 0px;
+  transition: 1s;
+}
+
+.div-new-3 {
+  text-align: center;
+}
+
+.fund-title-new {
+  padding: 30px 0 40px 0;
+  color: white;
+}
+
+.form-cont-new {
+  margin-top: 7%;
+  margin-left: 50%;
+  transform: translate(-50%, 0);
+  justify-content: center;
+  text-align: center;
+  padding: 50px 30px;
+  background-color: rgb(128, 128, 128);
+  max-width: 500px;
+  min-height: auto;
+}
+
+.form-cont-1 {
+  background-color: rgba(128, 128, 128, 0.075);
+}
