--- a/src/details/details.css
+++ b/src/details/details.css
@@ -1,153 +1,151 @@
 /* Profile image header */
-#profile-upper
-{
-    position: relative;
+
+#profile-upper {
+  position: relative;
 }
 
-#profile-d
-{
-    position: absolute;
-    left: 200px;
-    bottom: 0px;
-    right: 0px;
-    height: 140px;
-    z-index: 2;
+#profile-d {
+  position: absolute;
+  left: 200px;
+  bottom: 0px;
+  right: 0px;
+  height: 140px;
+  z-index: 2;
 }
 
-#profile-banner-image
-{
-    height: 360px;
-    overflow: hidden;
-    z-index: 1;
+#profile-banner-image {
+  height: 360px;
+  overflow: hidden;
+  z-index: 1;
 }
 
-#profile-banner-image img
-{
-    width: 100%;
-    margin-top: -20%;
+#profile-banner-image img {
+  width: 100%;
+  margin-top: -20%;
 }
 
-#profile-pic
-{
-    width: 180px;
-    height: 180px;
-    border-radius: 3px;
-    margin-top: 28px;
-    overflow: hidden;
-    box-shadow: 0 0 0 5px #fff;
+#profile-pic {
+  width: 180px;
+  height: 180px;
+  border-radius: 3px;
+  margin-top: 28px;
+  overflow: hidden;
+  box-shadow: 0 0 0 5px #fff;
 }
 
-#profile-pic img
-{
-    width: 100%;
+#profile-pic img {
+  width: 100%;
 }
-
 
 .container {
-    margin:10px auto;
-    padding-left: 200px;
-    font-size: 24px;
-    border-bottom: 1px solid grey;
+  margin: 10px auto;
+  padding-left: 400px;
+  font-size: 24px;
+  border-bottom: 1px solid grey;
 }
+
 .container2 {
-    margin:20px auto;
-    padding-left: 220px;
+  margin: 20px auto;
+  padding-left: 220px;
 }
+
 .box {
-    max-width: 1560px;
-    margin:10px auto;
-    /* padding-left: 200px;
+  max-width: 1560px;
+  margin: 10px auto;
+  /* padding-left: 200px;
     padding-right: 200px; */
-    font-size: 20px;
-    color: rgb(94, 91, 91);
+  font-size: 20px;
+  color: rgb(94, 91, 91);
 }
 
+/* Create two equal columns that floats next to each other */
 
-  
-  /* Create two equal columns that floats next to each other */
-  .column {
-    float: left;
-    width: 25%;
-    padding: 10px;
-    font-weight: bold;
-  }
-
-  .column1 {
-    float: left;
-    width: 20%;
-    padding: 10px;
-    color: gray;
-  }
-
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
-
-
-  .fa {
-    padding: 5px;
-    font-size: 10px;
-    width: 30px;
-    text-align: center;
-    text-decoration: none;
-    margin-top: 2px;
-    margin: 0px 3px;
-    border-radius: 10px;
-  }
-  
-  .fa:hover {
-      opacity: 0.7;
-  }
-  
-  .fa-facebook {
-    background: #3B5998;
-    color: white;
-  }
-  
-  .fa-twitter {
-    background: #55ACEE;
-    color: white;
-  }
-  
-  
-  .fa-linkedin {
-    background: #007bb5;
-    color: white;
-  }
-  
-  .CategoryLabel {
-    font-size: 0.75rem;
-    margin-top: 7px;
-    padding: 0.2em 0.5em;
-    background: rgb(199, 190, 190);
-    border: 1px solid #e8eaeb;
-    color: #34383a;
-    white-space: nowrap;
-    display: inline-block;
-}
-.column1 > p{
-    padding-top: 10px;
-}
-.column > p {
-    padding-top: 10px;
-}
-
-.socials {
-    padding-top: 7px;
-}
-
-.column3 {
+.column {
   float: left;
   width: 25%;
   padding: 10px;
   font-weight: bold;
 }
 
+.column1 {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  color: gray;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.fa {
+  padding: 5px;
+  font-size: 10px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin-top: 2px;
+  margin: 0px 3px;
+  border-radius: 10px;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.CategoryLabel {
+  font-size: 0.75rem;
+  margin-top: 7px;
+  padding: 0.2em 0.5em;
+  background: rgb(199, 190, 190);
+  border: 1px solid #e8eaeb;
+  color: #34383a;
+  white-space: nowrap;
+  display: inline-block;
+}
+
+.column1>p {
+  padding-top: 10px;
+}
+
+.column>p {
+  padding-top: 10px;
+}
+
+.socials {
+  padding-top: 7px;
+}
+
+.column3 {
+  float: left;
+  width: 45%;
+  padding: 10px;
+  font-weight: bold;
+  text-align: center;
+}
+
 .button {
-  background-color: #4CAF50; /* Green */
+
+  width:60%;
+  background-color: #4CAF50;
+  /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -157,14 +155,23 @@
   font-size: 16px;
   margin: 10px 2px;
   cursor: pointer;
-  -webkit-transition-duration: 0.4s; /* Safari */
+  -webkit-transition-duration: 0.4s;
+  /* Safari */
   transition-duration: 0.4s;
 }
 
 .button1 {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .button2:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+ .box-to-pad{
+  padding:auto 90px auto 150px;
+} 
+
+.box-new{
+  margin:auto 10% auto 10%;
 }
